--- a/configs/telegraf/telegraf.d/inputs.kafka_consumer.conf
+++ b/configs/telegraf/telegraf.d/inputs.kafka_consumer.conf
@@ -18,7 +18,7 @@
   # All JSON numbers are converted to float fields. JSON String are ignored
   # unless specified in the tag_key or json_string_fields options.
   json_string_fields = ["channel", "channelType"]
-  # fielddrop = ["raw*"]
+  fielddrop = ["raw*"]
   json_time_key = "timestamp"
   json_time_format = "unix_ms"
 
@@ -38,6 +38,7 @@
     "pair",
     "rawPair",
   ]
+  fielddrop = ["raw*"]
   json_time_key = "fundingTime"
   json_time_format = "unix_ms"
 
@@ -55,5 +56,27 @@
   tag_keys = [
     "interval"
   ]
+  fielddrop = ["raw*"]
+  json_time_key = "timestamp"
+  json_time_format = "unix_ms"
+
+[[inputs.kafka_consumer]]
+  brokers = ["kafka:9092"]
+  topics = ["crypto-crawlers.ticker"]
+  name_override = "ticker"
+  version = "2.1.0"
+  consumer_group = "ticker_consumers"
+
+  max_message_len = 0
+
+  data_format = "json"
+  json_strict = true
+  tag_keys = [
+    "exchange",
+    "marketType",
+    "pair",
+    "rawPair"
+  ]
+  fielddrop = ["raw*"]
   json_time_key = "timestamp"
   json_time_format = "unix_ms"
