--- a/configs/telegraf/telegraf.d/inputs.kafka_consumer.conf
+++ b/configs/telegraf/telegraf.d/inputs.kafka_consumer.conf
@@ -80,3 +80,25 @@
   fielddrop = ["raw*"]
   json_time_key = "timestamp"
   json_time_format = "unix_ms"
+
+[[inputs.kafka_consumer]]
+  brokers = ["kafka:9092"]
+  topics = ["crypto-crawlers.kline"]
+  name_override = "kline"
+  version = "2.1.0"
+  consumer_group = "kline_consumers"
+
+  max_message_len = 0
+
+  data_format = "json"
+  json_strict = true
+  tag_keys = [
+    "exchange",
+    "marketType",
+    "pair",
+    "rawPair",
+    "period",
+  ]
+  fielddrop = ["raw*"]
+  json_time_key = "timestamp"
+  json_time_format = "unix_ms"
