--- a/configs/grafana/provisioning/dashboards/dashboard.yml
+++ b/configs/grafana/provisioning/dashboards/dashboard.yml
@@ -5,6 +5,7 @@ providers:
     type: file
     disableDeletion: false
     editable: true
+    allowUiUpdates: false
     options:
       path: /etc/grafana/provisioning/dashboards
       foldersFromFilesStructure: true
