--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,41 +3,12 @@ version: "3.8"
 services:
   redis:
     image: redis:latest
-    command: --requirepass programmer123
-    container_name: redis
     ports:
       - 6379:6379
-
-  zookeeper:
-    image: "bitnami/zookeeper:latest"
-    container_name: zookeeper
-    ports:
-      - "2181:2181"
-    volumes:
-      - "zookeeper_data:/bitnami"
-    environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
-
-  kafka:
-    image: "bitnami/kafka:latest"
-    container_name: kafka
-    ports:
-      - "9092:9092"
-    volumes:
-      - "kafka_data:/bitnami"
-    environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - ALLOW_PLAINTEXT_LISTENER=yes
-      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
-      - KAFKA_CFG_LOG_RETENTION_HOURS=1
-      - KAFKA_CFG_RETENTION_HOURS=1
-    depends_on:
-      - zookeeper
     restart: always
 
   influxdb:
     image: influxdb:latest
-    container_name: influxdb
     ports:
       - 8086:8086
     environment:
@@ -50,21 +21,19 @@ services:
       - INFLUXDB_HTTP_LOG_ENABLED=false
     volumes:
       - "influxdb_data:/var/lib/influxdb"
+    restart: always
 
-  telegraf:
-    image: telegraf:latest
-    container_name: telegraf
-    command: telegraf --config /etc/telegraf/telegraf.conf --config-directory /etc/telegraf/telegraf.d
-    volumes:
-      - "./configs/telegraf:/etc/telegraf:ro"
+  logstash:
+    build:
+      context: ./containers/logstash
+    image: logstash:latest
     depends_on:
+      - redis
       - influxdb
-      - kafka
     restart: always
 
   grafana:
     image: grafana/grafana:latest
-    container_name: grafana
     ports:
       - 3000:3000
     environment:
@@ -75,25 +44,20 @@ services:
       - "./configs/grafana/provisioning:/etc/grafana/provisioning:ro"
     depends_on:
       - influxdb
+    restart: always
 
   crawlers:
     build:
       context: ./crypto-crawlers
     image: crypto-crawlers:latest
-    container_name: crypto-crawlers
     environment:
-      - REDIS_URL=redis://xxx:programmer123@redis:6379
-      - KAFKA_HOST=kafka:9092
+      - REDIS_URL=redis://redis:6379
     depends_on:
-      - kafka
+      - redis
     restart: always
 
 volumes:
   influxdb_data:
     driver: local
   grafana_data:
-    driver: local
-  zookeeper_data:
-    driver: local
-  kafka_data:
     driver: local
