Created 6 logstash pipelines

--- a/containers/logstash/pipeline/kline_ext.conf
+++ b/containers/logstash/pipeline/kline_ext.conf
@@ -50,5 +50,6 @@ output {
     password => "passw0rd"
     use_event_fields_for_data_points => true
     send_as_tags => ["exchange", "market_type", "pair", "raw_pair", "bar_size"]
+    exclude_fields => ["@timestamp", "@version", "sequence", "message", "type", "raw"]
   }
 }
