--- a/utils/package.json
+++ b/utils/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "crypto-indicators",
-  "version": "0.0.3",
-  "description": "Calculate all kinds of indicators to assist cryptocurrency trading.",
-  "bin": "dist/cli.js",
+  "name": "utils",
+  "version": "0.0.2",
+  "description": "Common utils.",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "source": "src/index.ts",
   "files": [
     "dist/"
   ],
@@ -11,7 +13,8 @@
     "start": "node ./dist/index.js",
     "lint": "eslint . --ext '.js,.jsx,.ts,.tsx,.md'",
     "prettier": "prettier -c --write '**/*'",
-    "prepare": "npm run build && npm run lint && npm run prettier"
+    "test": "jest --config jest.config.json --no-cache",
+    "prepare": "npm run build && npm run lint && npm run prettier && npm run test"
   },
   "husky": {
     "hooks": {
@@ -23,9 +26,8 @@
     "url": "git+https://github.com/soulmachine/crypto-indicators.git"
   },
   "keywords": [
-    "bitcoin",
-    "blockchain",
-    "cryptocurrency"
+    "typescript",
+    "CLI"
   ],
   "engines": {
     "node": ">=10"
@@ -37,32 +39,26 @@
   },
   "homepage": "https://github.com/soulmachine/crypto-indicators",
   "devDependencies": {
-    "@types/lodash": "^4.14.161",
-    "@types/mkdirp": "^1.0.1",
-    "@types/node": "^14.6.4",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.10.0",
     "@types/redis": "^2.8.27",
-    "@types/yargs": "^15.0.5",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "eslint": "^7.8.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.0.0",
     "eslint-plugin-markdown": "^1.0.2",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
+    "jest": "^26.4.2",
     "prettier": "^2.1.1",
+    "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
   },
   "dependencies": {
-    "axios": "^0.20.0",
-    "crypto-crawler": "^3.1.3",
-    "crypto-markets": "^0.3.9",
-    "lodash": "^4.17.20",
-    "mkdirp": "^1.0.4",
     "redis": "^3.0.2",
-    "utils": "file:../utils/",
-    "winston": "^3.3.3",
-    "yargs": "^16.0.3"
+    "winston": "^3.3.3"
   }
 }
