Moved two nodejs projects crypto-crawlers and utils to the new directory nodejs/

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
 
   crawlers:
     build:
-      context: ./
+      context: ./nodejs
       dockerfile: Dockerfile.crawlers
     image: crypto-crawlers:latest
     environment:
