--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,3 +16,24 @@ services:
       - "./configs/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
     depends_on:
       - grafana
+
+  # Ethereum full node
+  ethereum:
+    image: ethereum/client-go:latest
+    command: --http --ws --http.addr 0.0.0.0 --ws.addr 0.0.0.0
+    ports:
+      - 8545:8545
+      - 8546:8546
+    volumes:
+      - "ethereum_data:/root/.ethereum"
+    restart: always
+
+  ethereum_crawlers:
+    environment:
+      - FULL_NODE_URL=ws://localhost:8546
+    depends_on:
+      - ethereum
+
+volumes:
+  ethereum_data:
+    driver: local
