--- a/nodejs/ethereum-crawlers/package.json
+++ b/nodejs/ethereum-crawlers/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "crypto-crawler": "^3.1.3",
     "lodash": "^4.17.20",
     "mkdirp": "^1.0.4",
     "redis": "^3.0.2",
